--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.131" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -253,6 +254,7 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.131" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -820,22 +822,23 @@
                                             </LinearLayout>
 
                                         </LinearLayout>
+
                                         <LinearLayout
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_weight="2.5"
                                             android:background="@color/colorWhite"
-                                            android:orientation="horizontal"
-                                            >
+                                            android:orientation="horizontal">
+
                                             <TextView
-                                                android:gravity="center"
-                                                android:background="@drawable/btn_time_shape"
                                                 android:id="@+id/txt_1_time"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
+                                                android:background="@drawable/btn_time_shape"
+                                                android:gravity="center"
                                                 android:text="text"
                                                 android:textColor="@color/colorBlack"
-                                                android:textSize="20dp"/>
+                                                android:textSize="20dp" />
                                         </LinearLayout>
                                         <!--   나누는 부분         -->
 
@@ -1497,23 +1500,24 @@
                                             </LinearLayout>
 
                                         </LinearLayout>
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_weight="2.5"
-                                        android:background="@color/colorWhite"
-                                        android:orientation="horizontal"
-                                        >
-                                        <TextView
-                                            android:gravity="center"
-                                            android:background="@drawable/btn_time_shape"
-                                            android:id="@+id/txt_2_time"
+
+                                        <LinearLayout
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
-                                            android:text="text"
-                                            android:textColor="@color/colorBlack"
-                                            android:textSize="20dp"/>
-                                    </LinearLayout>
+                                            android:layout_weight="2.5"
+                                            android:background="@color/colorWhite"
+                                            android:orientation="horizontal">
+
+                                            <TextView
+                                                android:id="@+id/txt_2_time"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="match_parent"
+                                                android:background="@drawable/btn_time_shape"
+                                                android:gravity="center"
+                                                android:text="text"
+                                                android:textColor="@color/colorBlack"
+                                                android:textSize="20dp" />
+                                        </LinearLayout>
 
                                         <!--   나누는 부분         -->
 
@@ -2174,22 +2178,23 @@
                                             </LinearLayout>
 
                                         </LinearLayout>
+
                                         <LinearLayout
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_weight="2.5"
                                             android:background="@color/colorWhite"
-                                            android:orientation="horizontal"
-                                            >
+                                            android:orientation="horizontal">
+
                                             <TextView
-                                                android:gravity="center"
-                                                android:background="@drawable/btn_time_shape"
                                                 android:id="@+id/txt_3_time"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
+                                                android:background="@drawable/btn_time_shape"
+                                                android:gravity="center"
                                                 android:text="text"
                                                 android:textColor="@color/colorBlack"
-                                                android:textSize="20dp"/>
+                                                android:textSize="20dp" />
                                         </LinearLayout>
                                         <!--   나누는 부분         -->
 
@@ -2851,22 +2856,23 @@
                                             </LinearLayout>
 
                                         </LinearLayout>
+
                                         <LinearLayout
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_weight="2.5"
                                             android:background="@color/colorWhite"
-                                            android:orientation="horizontal"
-                                            >
+                                            android:orientation="horizontal">
+
                                             <TextView
-                                                android:gravity="center"
-                                                android:background="@drawable/btn_time_shape"
                                                 android:id="@+id/txt_4_time"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
+                                                android:background="@drawable/btn_time_shape"
+                                                android:gravity="center"
                                                 android:text="text"
                                                 android:textColor="@color/colorBlack"
-                                                android:textSize="20dp"/>
+                                                android:textSize="20dp" />
                                         </LinearLayout>
                                         <!--   나누는 부분         -->
 
